# bq-schema-migrator

./: .gitignore  DECISIONS.md  README.md  migrate.py  models.py  pyproject.toml
.github/workflows/: ci.yml
data/: bigquery_schema.json
tests/: migrate_test.py
