[project]
name = "bq-schema-migrator"
version = "0.1.0"
description = "Take-home: Build a BigQuery schema migration tool"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
